--- a/SolidLightWorks/Main.storyboard
+++ b/SolidLightWorks/Main.storyboard
@@ -35,14 +35,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="411" height="200"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xeh-Ig-P5m">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xeh-Ig-P5m">
                                 <rect key="frame" x="19" y="164" width="110" height="18"/>
                                 <buttonCell key="cell" type="check" title="Doubling Back" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Zjf-uh-0vb">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                             </button>
-                            <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LVU-nJ-dV8">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LVU-nJ-dV8">
                                 <rect key="frame" x="16" y="131" width="76" height="18"/>
                                 <buttonCell key="cell" type="check" title="Coupling" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="GWi-Cv-VHs">
                                     <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -63,6 +63,31 @@
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                             </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LYi-It-B9w">
+                                <rect key="frame" x="193" y="162" width="93" height="16"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Switch interval" id="nMm-Oc-ODf">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oQy-Uv-cn5">
+                                <rect key="frame" x="290" y="156" width="104" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <popUpButtonCell key="cell" type="push" title="30 seconds" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" tag="30" imageScaling="proportionallyDown" inset="2" selectedItem="NLs-ZU-65j" id="88V-di-Omj">
+                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                    <menu key="menu" id="FEV-rG-x62">
+                                        <items>
+                                            <menuItem title="10 seconds" tag="10" id="Gi9-Nk-hlS"/>
+                                            <menuItem title="30 seconds" state="on" tag="30" id="NLs-ZU-65j"/>
+                                            <menuItem title="1 Minute" tag="60" id="YV4-bT-Yff"/>
+                                            <menuItem title="5 Minutes" tag="300" id="PWy-tD-25Y"/>
+                                        </items>
+                                    </menu>
+                                </popUpButtonCell>
+                            </popUpButton>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eO8-Nv-7O3">
                                 <rect key="frame" x="339" y="13" width="59" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -93,14 +118,14 @@ Gw
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="LVU-nJ-dV8" firstAttribute="top" secondItem="xeh-Ig-P5m" secondAttribute="bottom" constant="20" id="1iE-il-7dJ"/>
-                            <constraint firstItem="xeh-Ig-P5m" firstAttribute="top" secondItem="RWM-V5-Bcl" secondAttribute="top" constant="20" symbolic="YES" id="MgL-Mo-FeR"/>
-                            <constraint firstItem="LVU-nJ-dV8" firstAttribute="leading" secondItem="DJX-HZ-i7d" secondAttribute="leading" id="Pgg-nf-rTD"/>
-                            <constraint firstItem="xeh-Ig-P5m" firstAttribute="leading" secondItem="LVU-nJ-dV8" secondAttribute="leading" id="Ztc-zA-Mc5"/>
-                            <constraint firstItem="DJX-HZ-i7d" firstAttribute="leading" secondItem="IBP-ln-WgT" secondAttribute="leading" id="ieM-Zt-WZN"/>
-                            <constraint firstItem="IBP-ln-WgT" firstAttribute="top" secondItem="DJX-HZ-i7d" secondAttribute="bottom" constant="20" id="ng0-au-rbw"/>
-                            <constraint firstItem="xeh-Ig-P5m" firstAttribute="leading" secondItem="RWM-V5-Bcl" secondAttribute="leading" constant="20" symbolic="YES" id="qbf-RU-qjw"/>
-                            <constraint firstItem="DJX-HZ-i7d" firstAttribute="top" secondItem="LVU-nJ-dV8" secondAttribute="bottom" constant="20" id="urI-Sc-NeW"/>
+                            <constraint firstItem="DJX-HZ-i7d" firstAttribute="top" secondItem="LVU-nJ-dV8" secondAttribute="bottom" constant="21" id="3iE-vy-dN0"/>
+                            <constraint firstItem="xeh-Ig-P5m" firstAttribute="leading" secondItem="RWM-V5-Bcl" secondAttribute="leading" constant="21" id="Bgi-W9-MQ1"/>
+                            <constraint firstItem="xeh-Ig-P5m" firstAttribute="top" secondItem="RWM-V5-Bcl" secondAttribute="top" constant="20" symbolic="YES" id="CRz-G8-YJS"/>
+                            <constraint firstItem="DJX-HZ-i7d" firstAttribute="leading" secondItem="RWM-V5-Bcl" secondAttribute="leading" constant="20" symbolic="YES" id="GzW-Q8-dOF"/>
+                            <constraint firstItem="LVU-nJ-dV8" firstAttribute="top" secondItem="xeh-Ig-P5m" secondAttribute="bottom" constant="19" id="am4-gh-gLl"/>
+                            <constraint firstItem="DJX-HZ-i7d" firstAttribute="leading" secondItem="IBP-ln-WgT" secondAttribute="leading" id="okw-zT-eU3"/>
+                            <constraint firstItem="LVU-nJ-dV8" firstAttribute="leading" secondItem="RWM-V5-Bcl" secondAttribute="leading" constant="18" id="vJl-Xe-6uE"/>
+                            <constraint firstItem="IBP-ln-WgT" firstAttribute="top" secondItem="DJX-HZ-i7d" secondAttribute="bottom" constant="20" id="yQF-VY-U2g"/>
                         </constraints>
                     </view>
                     <connections>
@@ -108,6 +133,7 @@ Gw
                         <outlet property="form2Check" destination="LVU-nJ-dV8" id="zn9-63-cpa"/>
                         <outlet property="form3Check" destination="DJX-HZ-i7d" id="ArG-wH-vYt"/>
                         <outlet property="form4Check" destination="IBP-ln-WgT" id="X3l-09-X1V"/>
+                        <outlet property="switchIntervalPopUp" destination="oQy-Uv-cn5" id="LR4-Bs-2tS"/>
                     </connections>
                 </viewController>
                 <customObject id="IIM-xs-qZ3" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
