Start work on keyboard controls and improve Leaving maths again

--- a/SolidLightWorksApp/Base.lproj/Main.storyboard
+++ b/SolidLightWorksApp/Base.lproj/Main.storyboard
@@ -706,7 +706,7 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="GameViewController" customModule="SolidLightWorksApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl" customClass="MTKView">
+                    <view key="view" id="m2S-Jp-Qdl" customClass="MyMTKView" customModule="SolidLightWorksApp" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
